tests/compile_errors/013-tostring-signature.buzz
| Expected `toString` method to be `fun toString() > str` got fun toString(str arg) > void
object Printable {
    fun toString(str arg) > void {}
}